# alkan-plotter

./: .gitignore  LICENSE  test.py
HcPlot-hs/: HcPlot-hs.cabal
HcPlot-hs/src/: FFI.hs  HcPlot.hs  Main.hs
HcPlot-hs/src/HcPlot/: Molecule.hs  Names.hs  data.csv
HcPlot-hs/src/exe/: Main.hs
python/: alkan-plotter.py  convertBytes.py  data.json  glass.inc  json-easy.json  plot.py  plot_image.py  test.py  twitter.py
