name:                HcPlot-hs
version:             0.1.0.0
-- homepage:
license:             MIT
license-file:        ../LICENSE
author:              Fabian Geiselhart
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Backend
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  exposed-modules:     HcPlot
  other-modules:       HcPlot.Names
                     , FFI
  default-language:    Haskell2010
  ghc-options:         -Wall
  build-depends:       base >= 4.7 && < 5
                     , QuickCheck

executable create
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -Wall
  build-depends:       base >= 4.7 && < 5
                     , QuickCheck
  other-modules:       HcPlot
                     , HcPlot.Names
  default-language:    Haskell2010
